@@ -3,6 +3,12 @@ NEWS - OpenPrinting CUPS Filters v1.0.34 - 2013-04-10
 
 CHANGES IN V1.0.35
 
+	- pdftops: Let Poppler generally generate PostScript level 3 if the
+	  PPD identifies the printer as PS3 printer, make an exception of
+	  sending PostScript Level 2 only for HP's laser printers, to not
+	  compromise print quality and performance on all PS3 printers only
+	  due to some buggy HP models (Debian bug #712949, see also Ubuntu bug
+	  #277404).
 	- Install pcl.h, it is needed by cupsfilters.drv. Thanks to Jiri
 	  Popelka from Red Hat for the patch (Bug #1133).
 	- Make cups-filters building with automake 1.13. Thanks to Andreas K.
